@@ -4,4 +4,5 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 PLG_CONTENT_PODCASTMANAGER="Content - Podcast Manger"
+PLG_CONTENT_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Could not automatically activate the "_QQ_"Content - Podcast Manager"_QQ_" plugin"
 PLG_CONTENT_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager plugin turns {enclose ...} tags into players and links"
