@@ -4,4 +4,5 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 PLG_EDITORS-XTD_PODCASTMANAGER="Button - Podcast Manger"
+PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Could not automatically activate the "_QQ_"Button - Podcast Manager"_QQ_" plugin"
 PLG_EDITORS-XTD_PODCASTMANAGER_XML_DESCRIPTION="The Podcast Manager Button plugin adds a Podcast button to the article editor"
